--- a/AndroidMvp/src/main/res/values-zh/strings.xml
+++ b/AndroidMvp/src/main/res/values-zh/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">金鼎会</string>
+    <string name="app_name">androidlib</string>
     
     <string name="loading_tip">加载中…</string>
     <string name="text_retry">点击重试</string>
